# adapters/src/main/kotlin/br/com/asoft/nfereader/adapters/out/persistence/model/projection/AnalisysTotalProjection.kt
@@ -1,0 +1,9 @@
+package br.com.asoft.nfereader.adapters.out.persistence.model.projection
+
+interface AnalisysTotalProjection {
+    val totalNotasProcessadas: Double
+    val totalCupomFiscalProcessados: Double
+    val clienteCount: Double
+    val produtoCount: Double
+    val valorTotalProcessado: Double
+}
