# domain/src/main/kotlin/br/com/asoft/nfereader/model/AnalisysTotal.kt
@@ -1,0 +1,9 @@
+package br.com.asoft.nfereader.model
+
+data class AnalisysTotal(
+    val totalNotasProcessadas: Double,
+    val totalCupomFiscalProcessados: Double,
+    val clienteCount: Double,
+    val produtoCount: Double,
+    val valorTotalProcessado: Double
+)
